--- a/src/components/menu-item/menu-item.styles.scss
+++ b/src/components/menu-item/menu-item.styles.scss
@@ -5,7 +5,8 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  border: 1px solid rgb(243, 240, 240);
+  border: 1px solid rgb(241, 245, 0);
+
   margin: 0 7.5px 15px;
   overflow: hidden;
   background-position: center;
@@ -54,8 +55,8 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    border: 1px solid black;
-    background-color: rgb(231, 213, 213);
+    border: 1px solid rgb(255, 255, 255);
+    background-color: rgb(235, 219, 5);
     position: absolute;
     opacity: 0.5;
 
@@ -63,7 +64,7 @@
       font-weight: bold;
       margin: 0 6px 0;
       font-size: 20px;
-      color: #000000;
+      color: #f00404;
     }
 
     .subtitle {
