--- a/src/pages/sign-in-and-sign-up/sign-in-and-sign-up.scss
+++ b/src/pages/sign-in-and-sign-up/sign-in-and-sign-up.scss
@@ -1,6 +1,6 @@
 .sign-in-and-sign-up {
-  width: 850px;
+  width: 90%;
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   margin: 30px auto;
 }
