--- a/src/components/Collection-item/Collection-item.style.scss
+++ b/src/components/Collection-item/Collection-item.style.scss
@@ -13,7 +13,7 @@
     background-position: center;
     margin-bottom: 5px;
   }
-  .custom-button {
+  .CustomButton {
     width: 80%;
     opacity: 0;
     position: absolute;
@@ -23,7 +23,7 @@
     .image {
       opacity: 0.8;
     }
-    .custom-button {
+    .CustomButton {
       opacity: 0.85;
       display: flex;
     }
