add Mobile version

--- a/src/components/sign-up/sign-up.style.scss
+++ b/src/components/sign-up/sign-up.style.scss
@@ -3,6 +3,10 @@
   flex-direction: column;
   width: 40%;
 
+  @media screen and (max-width: 800px) {
+    width: 50%;
+  }
+
   .title {
     margin: 10px 0;
   }
