--- a/src/pages/sign-in-and-sign-up/sign-in-and-sign-up.scss
+++ b/src/pages/sign-in-and-sign-up/sign-in-and-sign-up.scss
@@ -3,4 +3,11 @@
   display: flex;
   justify-content: space-around;
   margin: 30px auto;
+
+  @media screen and (max-width: 800px) {
+    width: 180%;
+    flex-direction: column;
+    justify-content: center;
+    margin: auto;
+  }
 }
