--- a/src/components/checkout-item/checkout.scss
+++ b/src/components/checkout-item/checkout.scss
@@ -7,6 +7,10 @@
   font-size: 20px;
   align-items: center;
 
+  @media screen and (max-width: 800px) {
+    font-size: 10px;
+  }
+
   .image-container {
     width: 23%;
     padding-right: 15px;
