--- a/src/pages/homepage/homepage.style.scss
+++ b/src/pages/homepage/homepage.style.scss
@@ -10,6 +10,10 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
+
+  @media screen and (max-width: 800px) {
+    width: 180%;
+  }
 }
 
 .menu-item {
